examples/datalog/15_arithmetic/29_chained_arithmetic.dl
% Test: Chained arithmetic assignments
% Expected: Multiple dependent calculations
% Category: 15_arithmetic
% Priority: P2 - Arithmetic patterns

.kg create test_chained
.kg use test_chained

+base[(10,)].

% Chain of calculations
result(V, A, B, C) :- base(V), A = V + 5, B = A * 2, C = B - 10.

?- result(V, A, B, C).

.kg use default
.kg drop test_chained
